new navbar and user profile settings

--- a/www/js/settings/settings.template.html
+++ b/www/js/settings/settings.template.html
@@ -1,24 +1,28 @@
-<ion-view view-title="Settings">
+<ion-view view-title="User Profile">
   <ion-content>
-	<div class="container-fluid">
-		<div class="row row-centered">
-			<div class="col-xs-10 col-centered">
-			<div class="list-group">
-		<div class="list-group-item"><h3>Welcome, {{user.first}}</h3></div>
-		<div class="list-group-item">
-			<button class="btn btn-primary" ui-sref="movieQueue({userId: user._id})">Movies</button>
+
+		<ion-item><h3>Welcome! </h3></ion-item>
+		<!-- Welcome, {{user.first}} -->
+
+		<ion-item>
+			<button class="btn btn-primary" ui-sref="movieQueue({userId: user._id})">My Stories</button>
+		</ion-item>
+
+		<ion-item>
+		
+			<button class="btn btn-primary" ui-sref="reviewsByUser({userId: user._id})">My Friends</button>
+		
+		</ion-item>
+
+		<ion-list>
+			<!-- <ol> -->
+				<ion-item>{{ user.email }}</ion-item>
+				<ion-item>{{ user.username }}</ion-item>
+				<!-- <ul><a ui-sref="billing">Billing Details</a></ul> -->
+			<!-- </ol> -->
+		</ion-list>
 		</div>
-		<div class="list-group-item">
-			<button class="btn btn-primary" ui-sref="reviewsByUser({userId: user._id})">Reviews</button>
-		</div>
-		<div class="list-group-item">
-			<ol>
-				<ul>{{ user.email }}</ul>
-				<ul>{{ user.username }}</ul>
-				<ul><a ui-sref="billing">Billing Details</a></ul>
-			</ol>
-		</div>
-		<div class="list-group-item">
+	<!-- 	<div class="list-group-item">
 			<h4>Plan Details</h4>
 			<ul>
 				<li>Plan: {{subscription.plan}}</li>
@@ -29,8 +33,8 @@
 				<li><a ui-sref="subscription">Change Plan</a></li>
 				<li><a ui-sref="subcancel">Cancel Plan</a></li>
 			</ul>
-		</div>
-		<div class="list-group-item">
+		</div> -->
+<!-- 		<div class="list-group-item">
 			<uib-accordion close-others="true">
     			<uib-accordion-group heading='My Orders' >
     				<div class="list-group-item" ng-repeat="order in orders">
@@ -43,10 +47,16 @@
 					</div>
     			</uib-accordion-group>
     		</uib-accordion>
-		</div>
+		</div> -->
 		</div>
 	</div>
 	</div>
 </div>
+      <div class="padding">
+        <button ng-click="logout()" class="button button-block button-positive">
+          <span ng-show="!loading">Log Out</span>
+          <i ng-show="loading" class="ion-loading-b"></i>
+        </button>
+      </div>
 </ion-content>
 </ion-view>
