--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
 
   <!-- Top navbar that changes based on states -->
     <ion-nav-bar class="bar-stable" ng-controller="Topnavbar">
-        <div ng-show="checkState()">
+        <div ng-hide="getState()">
             <ion-nav-back-button></ion-nav-back-button>
         </div>
     <ion-nav-buttons side="left">
