--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Edit Image" id="container">
-	<ion-content scroll="true" id="addonWrapper" class="canvasAndAddonContainer">
+
+
+	<ion-content scroll="false" id="addonWrapper" class="canvasAndAddonContainer">
  
  		<canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
 
