--- a/www/index.html
+++ b/www/index.html
@@ -74,32 +74,41 @@
   </head>
 
   <body ng-app="starter">
-    <ion-nav-bar class="bar-stable">
-<!--       <ion-nav-buttons side="left"><button class="button button-icon ion-navicon"></button></ion-nav-buttons>
-      <ion-nav-back-button ng-if=" !&apos;home&apos; | isState"></ion-nav-back-button>
-      <ion-nav-buttons side="left">
-        <button ng-if=" &apos;home&apos; | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
-        <!-- <button class="button button-icon ion-search"></button> -->
-<!--         <button ng-if=" !&apos;home&apos; | isState" class="button icon-left ion-home"></button>
-      </ion-nav-buttons>
-      <ion-nav-buttons side="right"> -->
-        <!-- <button class="button button-icon ion-ios-email"></button> -->
-<!--         <button class="button button-icon ion-ios-people"></button>
-        <button ng-if=" &apos;home&apos; | isState" class="button button-icon ion-gear-a"></button>
-        <button ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-grid"></button> -->
-     <!--  <ion-nav-buttons side="left"><button class="button button-icon ion-navicon"></button></ion-nav-buttons> -->
-      <ion-nav-back-button></ion-nav-back-button>
-      <ion-nav-buttons side="left">
-      <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
-        <button ng-if=" 'home' | !isState" class="button icon-left ion-home"></button>
-        <!-- <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button> -->
-      </ion-nav-buttons>
-      <ion-nav-buttons side="right">
-        <!-- <button class="button button-icon ion-ios-email"></button> -->
-        <button ng-if=" 'home' | isState" class="button button-icon ion-person-add"></button>
-        <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
-      </ion-nav-buttons>
+    
+    <!-- Home State Navbar -->
+    <ion-nav-bar class="bar-stable" ng-controller>
+
+        <ion-nav-back-button></ion-nav-back-button>
+
+        <ion-nav-buttons side="left">
+            <button ng-if=" 'home' | !isState" class="button icon-left ion-home"></button>
+        </ion-nav-buttons>
+
+        <ion-nav-buttons side="right">
+            <button  class="button button-icon ion-person-add">
+            </button>
+            <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
+        </ion-nav-buttons>
+
+    </ion-nav-bar>
+
+    <!-- Camera State Navbar -->
+    <ion-nav-bar class="bar-stable" ng-controller>
+
+        <ion-nav-back-button></ion-nav-back-button>
+
+        <ion-nav-buttons side="left">
+            <button ng-if=" 'home' | !isState" class="button icon-left ion-home"></button>
+        </ion-nav-buttons>
+
+        <ion-nav-buttons side="right">
+            <button  class="button button-icon ion-person-add">
+            </button>
+            <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
+        </ion-nav-buttons>
+
+    </ion-nav-bar>
     <ion-nav-view>
     </ion-nav-view>
-  </ion-nav-bar></body>
+  </body>
 </html>
