--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,6 @@
     <script src="js/camera/grafi.factory.js"></script>
     <script src="js/camera/filter.factory.js"></script>
 
-
     <!-- Directives -->
     <script src="js/navbar/navbar.main/navbar.main.directive.js"></script>
     <script src="js/navbar/navbar.addons/navbar.addons.directive.js"></script>
@@ -78,22 +77,20 @@
 
   <!-- Top navbar that changes based on states -->
     <ion-nav-bar class="bar-stable" ng-controller="Topnavbar">
-
         <ion-nav-buttons side="left">
             <button ng-hide="'home' | isState" ui-sref="home" class="button icon-left ion-home"></button>
           <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <!-- <button class="button button-icon ion-ios-email"></button> -->
             <button ng-if=" 'home' | isState" class="button button-icon ion-person-add"></button>
             <button ui-sref="story" ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button>
-            <button ui-sref="settings" ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
+            <button ui-sref="settings" ng-if=" 'home' | isState" class="button button-icon ion-ios-gear"></button>
             <button ng-click="save()" ng-if=" 'camera' | isState" class="button button-icon ion-checkmark-circled"></button>
+            <!-- <button class="button button-icon ion-ios-email"></button> -->
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-nav-view>
-    </ion-nav-view>
+    <ion-nav-view></ion-nav-view>
     
   </body>
 </html>
