--- a/www/index.html
+++ b/www/index.html
@@ -77,43 +77,21 @@
 
     <body ng-app="starter">
 
-  <!-- Top navbar that changes based on states -->
-<!--   Camera Navbar -->
     <ion-nav-bar class="bar-stable" ng-controller="Topnavbar">
-<<<<<<< HEAD
         <ion-nav-buttons side="left">
-            <button ng-hide="'home' | isState" ui-sref="home" class="button icon-left ion-home"></button>
           <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
+            <button ng-hide="'home' | isState" ui-sref="home" class="button icon-left ion-home"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button ng-if=" 'home' | isState" class="button button-icon ion-person-add"></button>
+            <button ng-if=" 'settings' | isState" class="button button-icon ion-ios-personadd"></button>
             <button ui-sref="story" ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button>
-            <button ui-sref="settings({storyId: story._id})" ng-if=" 'home' | isState" class="button button-icon ion-ios-gear"></button>
-            <button ng-click="save()" ng-if=" 'camera' | isState" class="button button-icon ion-checkmark-circled"></button>
+            <button ui-sref="settings({userId: user._id})" ng-if=" 'home' | isState" class="button button-icon ion-ios-person"></button>
+            <button ng-if=" 'camera' | isState" class="button button-icon ion-checkmark-circled" ng-click="save()"></button>
             <!-- <button class="button button-icon ion-ios-email"></button> -->
         </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-nav-view></ion-nav-view>
     
-=======
-        <!-- <div ng-hide="getState()"> -->
-       
-        <!-- <ion-nav-back-button hide-back-button="getState()"></ion-nav-back-button> -->
-        <ion-nav-buttons side="left">
-            <button ng-hide="&apos;home&apos; | isState" ui-sref="home" class="button icon-left ion-home"></button>
-          <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
-            <!-- <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button> -->
-        </ion-nav-buttons>
-        <ion-nav-buttons side="right">
-            <!-- <button class="button button-icon ion-ios-email"></button> -->
-            <button ng-if=" &apos;home&apos; | isState" class="button button-icon ion-person-add"></button>
-            <button ui-sref="settings" ng-if=" &apos;home&apos; | isState" class="button button-icon ion-gear-a"></button>            
-            <button ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-checkmark-circled" ng-click="save()"></button>
-        </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view>
-    </ion-nav-view>
->>>>>>> master
   </body>
 </html>
