--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -75,19 +75,18 @@
 
   </head>
 
-    <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
+    <body ng-app="starter">
 
     <ion-nav-bar class="bar-stable" ng-controller="Topnavbar">
         <ion-nav-buttons side="left">
           <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
-            <button ng-hide="'home' | isState" ui-sref="home" class="button icon-left ion-home"></button>
+            <button ng-hide="&apos;home&apos; | isState" ui-sref="home" class="button icon-left ion-home"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button ng-if=" 'settings' | isState" class="button button-icon ion-ios-personadd"></button>
-            <button ui-sref="story" ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button>
-            <button ui-sref="settings({userId: user._id})" ng-if=" 'home' | isState" class="button button-icon ion-ios-person"></button>
-            <button ng-if=" 'camera' | isState" class="button button-icon ion-checkmark-circled" ng-click="save()"></button>
-            <!-- <button class="button button-icon ion-ios-email"></button> -->
+            <button ng-if=" &apos;settings&apos; | isState" class="button button-icon ion-ios-personadd"></button>
+            <button ui-sref="story" ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-ios-close-outline"></button>
+            <button ui-sref="settings({userId: user._id})" ng-if=" &apos;home&apos; | isState" class="button button-icon ion-ios-person"></button>
+            <button ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-checkmark-circled" ng-click="save()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
