--- a/www/index.html
+++ b/www/index.html
@@ -84,10 +84,9 @@
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
             <button ng-if=" &apos;settings&apos; | isState" class="button button-icon ion-ios-personadd"></button>
-            <button ui-sref="story" ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-grid"></button>
+            <button ui-sref="story" ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-ios-close-outline"></button>
             <button ui-sref="settings({userId: user._id})" ng-if=" &apos;home&apos; | isState" class="button button-icon ion-ios-person"></button>
             <button ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-checkmark-circled" ng-click="save()"></button>
-            <!-- <button class="button button-icon ion-ios-email"></button> -->
         </ion-nav-buttons>
     </ion-nav-bar>
 
