--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -53,11 +53,11 @@
 
 
     <!-- Directives -->
-    <script src="js/navbar/navbar.main/navbar.main.directive.js"></script>
     <script src="js/navbar/navbar.addons/navbar.addons.directive.js"></script>
     <script src="js/navbar/navbar.addons/navbar.elastic.directive.js"></script>
     
     <!-- Controllers -->
+    <script src="js/navbar/navbar.main/navbar.main.controller.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/home/home.controller.js"></script>
     <script src="js/signup/signup.js"></script>
@@ -75,47 +75,6 @@
 
   </head>
 
-<<<<<<< Updated upstream
-  <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-buttons side="left"><button class="button button-icon ion-navicon"></button></ion-nav-buttons>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-      <ion-nav-back-button ng-if=" !&apos;home&apos; | isState"></ion-nav-back-button>
-      <ion-nav-buttons side="left">
-        <button ng-if=" &apos;home&apos; | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-        <!-- <button class="button button-icon ion-search"></button> -->
-        <button ng-if=" !&apos;home&apos; | isState" class="button icon-left ion-home"></button>
-=======
->>>>>>> master
-      <ion-nav-back-button ng-if=" !'home' | isState"></ion-nav-back-button>
-      <ion-nav-buttons side="left">
-        <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-        <!-- <button class="button button-icon ion-search"></button> -->
-        <button ng-if=" !'home' | isState" class="button icon-left ion-home"></button>
-<<<<<<< HEAD
-=======
->>>>>>> master
->>>>>>> master
-      </ion-nav-buttons>
-      <ion-nav-buttons side="right">
-        <!-- <button class="button button-icon ion-ios-email"></button> -->
-        <button class="button button-icon ion-ios-people"></button>
-<<<<<<< HEAD
-        <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
-        <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button>
-=======
-<<<<<<< HEAD
-        <button ng-if=" &apos;home&apos; | isState" class="button button-icon ion-gear-a"></button>
-        <button ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-grid"></button>
-=======
-        <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
-        <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button>
->>>>>>> master
->>>>>>> master
-      </ion-nav-buttons>
-=======
     <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
 
   <!-- Top navbar that changes based on states -->
@@ -133,12 +92,10 @@
             <!-- <button class="button button-icon ion-ios-email"></button> -->
             <button ng-if=" &apos;home&apos; | isState" class="button button-icon ion-person-add"></button>
             <button ui-sref="settings" ng-if=" &apos;home&apos; | isState" class="button button-icon ion-gear-a"></button>            
-            <button ui-sref="story" ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-gear-a" ng-click="save()"></button>
+            <button ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-checkmark-circled" ng-click="save()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
->>>>>>> Stashed changes
     <ion-nav-view>
     </ion-nav-view>
-    
   </body>
 </html>
