--- a/platforms/ios/www/js/login/login.html
+++ b/platforms/ios/www/js/login/login.html
@@ -1,6 +1,6 @@
 <form ua-login>
   <ion-view title="Login">
-    <ion-content>
+    <ion-content style="background-image: url('assets/yelloworangedots.jpg') !important">
       <div class="list list-inset">
         <label class="item item-input">
           <span class="input-label">Email</span>
