--- a/platforms/ios/www/js/signup/signup.html
+++ b/platforms/ios/www/js/signup/signup.html
@@ -1,6 +1,6 @@
 <form ua-signup ng-submit="sendSignup(signup)">
   <ion-view title="Sign Up">
-    <ion-content>
+    <ion-content style="background-image: url('assets/yelloworangedots.jpg') !important">
 
       <div class="list list-inset">
         <label class="item item-input">
