--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -6,7 +6,7 @@
 		<h1 ng-click="previewImage()" id="one">PREVIEW IMG</h1>
  --><!-- END OF PLACEHOLDER FOR BUBBLE -->
 
- 
+ 		<div id="here"></div>
  		<canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
  		<img ng-src={{chosenBorder.source}} style="position: absolute; top: 0; left: 0 "></img>
 
@@ -33,27 +33,27 @@
 			left:0px">
 		</img>	
  
-		    <div
-			    id="bubble{{bubble.id}}"
-		    	class="inputBubble"
-			    placeholder="Text"
-			    hm-panmove="onHammer"
-			    hm-press="onPress"
-			    hm-pressup="onHammerEnd"
-			    hm-panend="onHammerEnd"
-			    ng-repeat="bubble in bubblesArray"
-			    >
 
+		
+	    	<div
+		    id="bubble{{bubble.id}}"
+	    	class="inputBubble"
+		    hm-panmove="onHammer"
+		    hm-press="onPress"
+		    hm-pressup="onHammerEnd"
+		    hm-panend="onHammerEnd"
+		    ng-repeat="bubble in bubblesArray"
+		    >
 			    <textarea
 			    id="textarea"
-			    placeholder="Text"
 			    scroll="false"
-			    elastic>
-			    </textarea>
+			    elastic></textarea>
 
-		    	<div ng-style="{{bubble.pointerStyle}}"></div>
-		    	<div ng-style="{{bubble.pointerBorderStyle}}"></div>
-		    </div>
+		    	<div id="pointer{{bubble.id}}" ng-style="{{bubble.pointerStyle}}"></div>
+		    	<div id="pointerBorder{{bubble.id}}" ng-style="{{bubble.pointerBorderStyle}}"></div>
+	    	</div>
+	   
+
 			   
 		<!-- <button class="button" ng-click="saveImage()">Save Image</button> -->
 
@@ -66,6 +66,7 @@
 			test="testFunc()" 
 			addons="allAddons",
 			url="url",
+			story="story"
 			takepicture="takePicture()"
 			openphotolibrary="openPhotoLibrary()"
 			onhammer="onHammer()"
