--- a/www/js/navbar/navbar.addons/navbar.addons.template.html
+++ b/www/js/navbar/navbar.addons/navbar.addons.template.html
@@ -6,7 +6,7 @@
 	</ion-content>
 	<ion-scroll direction="x" id="addonsBottom">
 		<div id="squareAndAddonFrames" ng-show="addonType!=='filter'">
-		    <button id="transparent" class="button" ng-repeat="addon in addons | filter: {type: addonType}" ng-click="addon.addonFunction()">
+		    <button ng-if="addonType !== 'filter'" id="transparent" class="button" ng-repeat="addon in addons | filter: {type: addonType}" ng-click="addon.addonFunction()">
 				<div>
 		    		<img src="{{ addon.thumbnail }}">
 		    	</div>
