--- a/www/js/login/login.html
+++ b/www/js/login/login.html
@@ -12,7 +12,7 @@
         </label>
       </div>
       <div class="padding">
-        <button ng-click="sendLogin(login)" class="button button-block button-positive">
+        <button ng-click="sendLogin(login)" style='background-color:black' class="button button-block button-positive">
           <span ng-show="!loading">Login</span>
           <i ng-show="loading" class="ion-loading-b"></i>
         </button>
