--- a/www/js/settings/settings.template.html
+++ b/www/js/settings/settings.template.html
@@ -53,7 +53,7 @@
 	</div>
 </div>
       <div class="padding">
-        <button ng-click="logout()" class="button button-block button-positive">
+        <button ng-click="logout()" ui-sref="login" class="button button-block button-positive">
           <span ng-show="!loading">Log Out</span>
           <i ng-show="loading" class="ion-loading-b"></i>
         </button>
