--- a/www/js/home/home.template.html
+++ b/www/js/home/home.template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home">
+<ion-view scroll="true" view-title="Home">
   <ion-content style="background-image: url('assets/bwbg.jpg') !important">
 
 <!-- create story button -->
@@ -50,6 +50,12 @@
     <div style="text-align:center;" ng-hide="showMyCollabs || showMyStories">
       <img src="assets/logo1.png" style="width:350px;height:250px;margin-top:25px">
     </div>
+
+
+<!-- example click animation -->
+<!--     <div style="text-align:center;">
+      <img ng-src="{{ clickPic }}" style="width:300px;height:210px;margin-top:25px" ng-click="changeSource()">
+    </div> -->
 
   </ion-content>
 </ion-view>
