--- a/www/js/story/story.create.template.html
+++ b/www/js/story/story.create.template.html
@@ -44,7 +44,7 @@
 <!-- SEARCH BY EMAIL INPUT -->
       <div class="list list-inset" ng-show="clicked" style="margin-top:0px;">
         <label class="item item-input">
-          <span class="input-label">Search friends by email</span>
+          <span class="input-label">Search by email</span>
           <input type="text" ng-model="searchedEmail" class="form-control">
         </label>
       </div>
